web-infras/parser/tests/fixtures/babel/es2015/uncategorised/233/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,21)
1|"use strict"; ({ v: eval } = obj)
 |                   ^
